--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ li a.active {
   
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="GALLERY.html">Gallery</a></li>
+  <li><a href="gallery.html">Gallery</a></li>
   <li><a href="#footer">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
