--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@ width: 55%;
         <ul><br>
             <li>
                  <a href="GALLERY10+.html">
-                    To  see the gallery of after the streams after 10th standard:
+                    This is the gallery for 10th Standard pass outs:
                    </a>
                 <br>
             </li>
