--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@ a{
 
 <div class="about-section">
   <h1>About Us</h1>
-  <p><a href="index.html">NEXT ENTI?</a> is about Career Guides site</p>
+  <p><a href="index.html">NEXT ENTI?</a> is about Career Guidance site</p>
   <p>KEEP CALM AND MAKE IT USEFULL</p>
 </div>
 <center>
