--- a/10w.html
+++ b/10w.html
@@ -75,7 +75,7 @@ a{
 <li><h2>complete career chart:</h2></li>
 <center>
   <a target="_blank" href="complete chart 10+.jfif"></a>
-  <img src="complete chart 10+.jfif"></center>
+  <img src="complete chart 10+.jfif" width="100%" height="100%"></center>
 <hr>
 <ul>
 <li>
