--- a/inter=+.html
+++ b/inter=+.html
@@ -81,7 +81,7 @@ width: 55%;
   </h2>
   <center>
     <a target="_blank" href="career12.jfif">
-    <img src="career12.jfif">
+      <img src="career12.jfif"></a>
   </center>
 </li>
 <hr>
@@ -106,10 +106,10 @@ width: 55%;
      <a href="#MERCHANT NAVY COURSES">MERCHANT NAVY COURSES</a>
     </li>
   <li> 
-   <a href=" B.ARCH"> B.ARCH.</a>
+   <a href="#B.ARCH"> B.ARCH.</a>
   </li>
   <li>
-    <a href="Degree COURSES">Degree COURSES</a>
+    <a href="#Degree COURSES">Degree COURSES</a>
   </li>
   
   <li>
