--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>NEXT ENTI?</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 * {
   box-sizing: border-box;
@@ -197,9 +198,9 @@ li a.active {
 <div class="footer">
 <footer id="footer"></footer>
 CONTACT: <BR><BR>
-<a href="https://www.instagram.com/keep_calm_kirru/"><img src="insta.png" width="30px" height="30px" ></a>
-<a href=https://wa.me/917995267162/?text="> <img src="whatsapp.png" width="30px" height="30px"></a>
-<a href="https://twitter.com/Kiran81591443"><img src="twi.jfif" width="30" height="30"> </a>
+<a href="https://www.instagram.com/keep_calm_kirru/" class="fa fa-instagram"   width="30px" height="30px" ></a>
+<a href=https://wa.me/917995267162/?text="  class="fa fa-whatsapp"  width="30px" height="30px"></a>
+<a href="https://twitter.com/Kiran81591443" class="fa fa-twitter" width="30" height="30"> </a>
 <br>
 
 @2020 NextEnti.com | ALL Rights Reserved <br>Gogula Kiran Kumar
