--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>NEXT ENTI?</title>
+<title>Page Title</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 * {
   box-sizing: border-box;
@@ -72,6 +72,23 @@ li a.active {
   box-shadow: 0 12px 16px 0 rgb(0, 0, 0),0 17px 50px 0 rgba(0, 0, 0, 0.986);
 }
 
+a{
+  text-decoration: none;
+}
+.fa-instagram {
+  background: rgb(152, 59, 102);
+  width: 20px;
+  
+  color: white;
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;width: 20px;
+}
+.fa-whatsapp {
+  background: green;
+  color: white;width: 20px;
+}
 
 
 /* Footer */
@@ -79,7 +96,6 @@ li a.active {
   padding: 15px;
   text-align: center;
   background: rgb(177, 171, 171);
- 
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@@ -114,7 +130,7 @@ li a.active {
 
 <!-- Header -->
 <div class="header">
-  <a href="index.html">
+  <a href="wp2.html">
   <img src="lo20.jpg" width="100%" height="100%"></a>
 </div>
 
@@ -123,10 +139,11 @@ li a.active {
   
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="gallery.html">Gallery</a></li>
+  <li><a href="GALLERY.html">Gallery</a></li>
   <li><a href="#footer">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
+
 
 
 <br>
@@ -198,9 +215,9 @@ li a.active {
 <div class="footer">
 <footer id="footer"></footer>
 CONTACT: <BR><BR>
-<a href="https://www.instagram.com/keep_calm_kirru/" class="fa fa-instagram"   width="30px" height="30px" ></a>
-<a href=https://wa.me/917995267162/?text="  class="fa fa-whatsapp"  width="30px" height="30px"></a>
-<a href="https://twitter.com/Kiran81591443" class="fa fa-twitter" width="30" height="30"> </a>
+<a href="https://www.instagram.com/keep_calm_kirru/" class="fa fa-instagram"   ></a>
+<a href="https://wa.me/917995267162/?text="  class="fa fa-whatsapp"      ></a>
+<a href="https://twitter.com/Kiran81591443"   class="fa fa-twitter" > </a>
 <br>
 
 @2020 NextEnti.com | ALL Rights Reserved <br>Gogula Kiran Kumar
