--- a/index.html
+++ b/index.html
@@ -92,11 +92,14 @@ a{
 
 
 /* Footer */
-.footer {
+.footer{
   padding: 15px;
   text-align: center;
-  background: rgb(177, 171, 171);
+  background: #474e5d;
+  color: #e7e7e7;
+  
 }
+
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
@@ -220,6 +223,6 @@ CONTACT: <BR><BR>
 <a href="https://twitter.com/Kiran81591443"   class="fa fa-twitter" > </a>
 <br>
 
-@2020 NextEnti.com | ALL Rights Reserved <br>Gogula Kiran Kumar
+@2020 <a href="index.html"  style="color:aqua;">NextEnti.com</a> | ALL Rights Reserved <br>Gogula Kiran Kumar
 </body>
 </html>
