--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ a{
   
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="GALLERY.html">Gallery</a></li>
+  <li><a href="gallery.html">Gallery</a></li>
   <li><a href="#footer">Contact</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
