--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ a{
 
 <!-- Header -->
 <div class="header">
-  <a href="wp2.html">
+  <a href="index.html">
   <img src="lo20.jpg" width="100%" height="100%"></a>
 </div>
 
