--- a/index.html
+++ b/index.html
@@ -220,9 +220,12 @@ CONTACT: <BR><BR>
 <a href="https://wa.me/917995267162/?text="  class="fa fa-whatsapp"      ></a>
 <a href="https://twitter.com/Kiran81591443"   class="fa fa-twitter" > </a>
 <br>
-<!-- Start of WebFreeCounter Code -->
+
+@2020 <a href="index.html"  style="color:aqua;">NextEnti.com</a> | ALL Rights Reserved <br>Gogula Kiran Kumar<br>
+  <!-- Start of WebFreeCounter Code -->
 <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvukcqoo&nd=6&style=6" border="0" alt="hit counter"></a>
 <!-- End of WebFreeCounter Code -->
-@2020 <a href="index.html"  style="color:aqua;">NextEnti.com</a> | ALL Rights Reserved <br>Gogula Kiran Kumar
+  </div>
+  
 </body>
 </html>
