--- a/index.html
+++ b/index.html
@@ -211,7 +211,6 @@ a{
 </div>
 <br>
 
-
 <!-- Footer -->
 <div class="footer">
 <footer id="footer"></footer>
@@ -223,9 +222,9 @@ CONTACT: <BR><BR>
 
 @2020 <a href="index.html"  style="color:aqua;">NextEnti.com</a> | ALL Rights Reserved <br>Gogula Kiran Kumar<br>
   <!-- Start of WebFreeCounter Code -->
-<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvukcqoo&nd=6&style=6" border="0" alt="hit counter"></a>
+<img src="https://www.webfreecounter.com/hit.php?id=gvukcqoo&nd=6&style=6" border="0" alt="hit counter"></a>
 <!-- End of WebFreeCounter Code -->
   </div>
-  
+ 
 </body>
 </html>
