--- a/10w.html
+++ b/10w.html
@@ -2,56 +2,41 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.collapsible {
- 
-  
-  cursor: pointer;
-  padding: 10px;
-  width:fit-content;
-  border-radius: 10%;
-  background-color: rgb(2, 2, 3);
-  color: #f0e7e7;
-  text-align: center;
-  font-size: 15px;
-}
+<link rel="stylesheet" href="stylew.css">
 
-a:hover,.collapsible:hover {
-  box-shadow: 0 12px 16px 0 rgb(87, 86, 86),0 17px 50px 0 rgba(73, 73, 73, 0.986);
-}
-
-.content {
-  margin-top: 30px;
-  padding: 0 18px;
-  margin-left: 0px;
-  border-radius: 7px;
- color: #f8f4f4;
-  display: none;
-  overflow: hidden;
-  background-color: #92df92;
-}
-body{
-  background-color: #ffffff;
-  color:rgb(27, 26, 26);
-}
-a{
-  text-decoration: none;
-  font-size: 20px;
-}
-
-</style>
 </head>
 <body>
-  <a href="index.html">
-    <img src="lo20.jpg" width="100%" height="100%">
-  </a>
+ 
+
+<div class="nav">
+  
+  <!-- Header -->
+  <div class="logo">
+    <a href="index.html">
+    <img src="log3.jpg" ></a>
+  </div>
+  
+  <!-- Navigation Bar -->
+  
+    <div class="nav-links">
+      
+  <ul>
+  
+    <li><a href="index.html">Home</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+  
+    </div>
+  
+  </div>
   <hr>
   
 <ul><li>
 <h2>Streams after 10th Standard:</h2>
-<p> move  to gallery to visualize about courses: <a href="GALLERY10+.html"> click here </a> </p>
+<p> move  to gallery to visualize about courses: <a href="GALLERY10+.html"> Click Here </a> </p>
 
-<button type="button" class="collapsible">click here</button>
+<button type="button" class="collapsible">Click Here</button>
 <div class="content">
 <ol>  
 <li> Intermediate Courses offered by Telangana State Board of Intermediate Education.</li>
@@ -75,14 +60,14 @@ a{
 <li><h2>complete career chart:</h2></li>
 <center>
   <a target="_blank" href="complete chart 10+.jfif"></a>
-  <img src="complete chart 10+.jfif" width="100%" height="100%"></center>
+  <img src="complete chart 10+.jfif"></center>
 <hr>
 <ul>
 <li>
 <h2>Courses in Intermediate Telangana and Andhra Pradesh:</h2>
-<p> move  to gallery to visualize about courses:  <a href="GALLERYinter.html"> click here </a> </p>
+<p> move  to gallery to visualize about courses:  <a href="GALLERYinter.html"> Click Here </a> </p>
 
-<button type="button" class="collapsible">click here</button>
+<button type="button" class="collapsible">Click Here</button>
 <div class="content">
 <ul><li><b>Sciences:</b></li></ul><ol> <br>
 <li>  Mathematics Physics Chemistry</li>
@@ -102,9 +87,9 @@ a{
 <hr>
 <li>
 <h2>Courses in Diploma:</h2>
-<p> move  to gallery to visualize about courses: <a href="GALLERYpol.html"> click here </a> </p>
+<p> move  to gallery to visualize about courses: <a href="GALLERYpol.html"> Click Here </a> </p>
 
-<button type="button" class="collapsible">click here</button>
+<button type="button" class="collapsible">Click Here</button>
 <div class="content">
 <ol>  
 <li>Civil Engineering . </li>
@@ -128,9 +113,9 @@ a{
 <hr>
 <li>
 <h2>Courses in ITI :</h2>
-<p> move  to gallery to visualize about courses: <a href="galleryiti.html"> click here </a> </p>
+<p> move  to gallery to visualize about courses: <a href="galleryiti.html"> Click Here </a> </p>
 
-<button type="button" class="collapsible">click here</button>
+<button type="button" class="collapsible">Click Here</button>
 <div class="content">
   <br>
 <ol> 
@@ -185,9 +170,9 @@ a{
 <hr>
 <li>
 <h2>Courses in ParaMedical: </h2>
-<p> move  to gallery to visualize about courses:<a href="gallerypara.html"> click here </a> </p>
+<p> move  to gallery to visualize about courses:<a href="gallerypara.html"> Click Here </a> </p>
 
-<button type="button" class="collapsible">click here</button>
+<button type="button" class="collapsible">Click Here</button>
 <div class="content">
 <ol>  
 <li> Dental Ceramic Assistant  </li>
@@ -208,9 +193,9 @@ a{
 <li>
 
 <h2>Courses in Short Term Courses:</h2>
-<p> move  to gallery to visualize about courses:   <a href="gallerystc.html"> click here </a> </p>
+<p> move  to gallery to visualize about courses:   <a href="gallerystc.html"> Click Here </a> </p>
 
-<button type="button" class="collapsible">click here</button>
+<button type="button" class="collapsible">Click Here</button>
 <div class="content">
 <ol>  
 <li>Office Automation 6 Months </li>
@@ -251,7 +236,7 @@ a{
 
 <h2> 6-years intigrated Courses offered by IIIT Basara:</h2>
 
-<button type="button" class="collapsible">click here</button>
+<button type="button" class="collapsible">Click Here</button>
 <div class="content">
 <ol>  
 <li>Chemical Engineering  </li>
