--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@ h2,p{
 
 <div class="about-section">
   <h1>About Us</h1>
-  <p><a href="index.HTML">NEXT ENTI?</a> is about Career Guides site</p>
+  <p><a href="index.html">NEXT ENTI?</a> is about Career Guides site</p>
   <p>KEEP CALM AND MAKE IT USEFULL</p>
 </div>
 <hr>
