--- a/10w.html
+++ b/10w.html
@@ -60,7 +60,8 @@
 <li><h2>complete career chart:</h2></li>
 <center>
   <a target="_blank" href="complete chart 10+.jfif"></a>
-  <img src="complete chart 10+.jfif"></center>
+  <img src="complete chart 10+.jfif" width="50% height="50%>
+ </ceter>
 <hr>
 <ul>
 <li>
