--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@
  <div class="card">
      <h3> To  see the gallery of<br> ParaMedical:</h3>
             
-      <a id="a1" href="gallerystc.html">Click Here</a>
+      <a id="a1" href="gallerypara.html">Click Here</a>
  </div>
 
 
