--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000;">
     <a class="navbar-brand" href="index.html">
-    <div class="logo"> <img src="log3.jpg" ></div>  
+    <div class="logo"> <img src="log3.png" ></div>  
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
