--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light" >
     <a class="navbar-brand" href="index.html">
-    <div class="logo"> <img src="logog.png" ></div>  
+    <div class="logo"> <img src="log3.png" ></div>  
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
