--- a/10w.html
+++ b/10w.html
@@ -313,7 +313,9 @@ CONTACT: <BR><BR>
 <a href="https://twitter.com/Kiran81591443"   class="fa fa-twitter" > </a>
 <br>
 
-@2020 <a href="index.html"  style="color:aqua;">NextEnti.com</a> | All Rights Reserved <br>Gogula Kiran Kumar<br>
+
+@2020 <a href="index.html"  style="color:rgb(0, 64, 255);">NextEnti.com</a> | All Rights Reserved <br>Gogula Kiran Kumar<br>
+
 
 </div>
 </div>
