--- a/galleryiti.html
+++ b/galleryiti.html
@@ -94,7 +94,7 @@ CONTACT: <BR><BR>
 <a href="https://twitter.com/Kiran81591443"   class="fa fa-twitter" > </a>
 <br>
 
-@2020 <a href="index.html"  style="color:aqua;">NextEnti.com</a> | All Rights Reserved <br>Gogula Kiran Kumar<br>
+@2020 <a href="index.html"  style="color:blue;">NextEnti.com</a> | All Rights Reserved <br>Gogula Kiran Kumar<br>
 
 <br>
 </div>
