--- a/stc=+.html
+++ b/stc=+.html
@@ -61,7 +61,7 @@
     <li>
   
       <h2>Courses in Short Term Courses:</h2>
-      <p> move  to gallery to visualize about courses:   <a href="gallerystc.html"> Click Here </a> </p>
+      <p> Move  to gallery to visualize about courses:   <a href="gallerystc.html"> Click Here </a> </p>
       
      
       <div>
@@ -137,7 +137,7 @@ CONTACT: <BR><BR>
 <a href="https://twitter.com/Kiran81591443"   class="fa fa-twitter" > </a>
 <br>
 
-@2020 <a href="index.html"  style="color:aqua;">NextEnti.com</a> | All Rights Reserved <br>Gogula Kiran Kumar<br>
+@2020 <a href="index.html"  style="color:blue;">NextEnti.com</a> | All Rights Reserved <br>Gogula Kiran Kumar<br>
 
 <br>
 </div>
