--- a/para=+.html
+++ b/para=+.html
@@ -59,7 +59,7 @@
   <uL>
     <li>
       <h1>Courses in ParaMedical: </h1></li>
-      <p> move  to gallery to visualize about courses:<a href="gallerypara.html"> Click Here  </a> </p>
+      <p> Move  to gallery to visualize about courses:<a href="gallerypara.html"> Click Here  </a> </p>
       
       <button class="btn btn-outline-primary collapsible">Click Here</button>
       <div class="content">
@@ -163,7 +163,7 @@ CONTACT: <BR><BR>
 <a href="https://twitter.com/Kiran81591443"   class="fa fa-twitter" > </a>
 <br>
 
-@2020 <a href="index.html"  style="color:aqua;">NextEnti.com</a> | All Rights Reserved <br>Gogula Kiran Kumar<br>
+@2020 <a href="index.html"  style="color:blue;">NextEnti.com</a> | All Rights Reserved <br>Gogula Kiran Kumar<br>
 
 <br>
 </div>
