--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="card-body">
          
-          <p class="card-text">select the best path you like the most</p>
+          <p class="card-text">Select the best path you like the most</p>
           <a href="10w.html" class="btn btn-outline-primary">Click Here</a>
         </div>
         
