--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@ CONTACT: <BR><BR>
 <br>
 
 @2020 <a href="index.html"  style="color:rgb(5, 25, 255);">NextEnti.com</a> | All Rights Reserved <br>Gogula Kiran Kumar<br>
-<!-- Start of WebFreeCounter Code -->
-<img src="https://www.webfreecounter.com/hit.php?id=gvukcqoo&nd=6&style=6" border="0" alt="hit counter">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7664128&style=0036&nbdigits=6&type=page&initCount=2452" title="Total Website Hits" Alt="Web Hits"   border="0" />                                   
+                                    
 <!-- End of WebFreeCounter Code -->
 <br>
 </div>
