--- a/10w.html
+++ b/10w.html
@@ -58,7 +58,7 @@
 
   <ul><li>
     <h2>Streams after 10th Standard:</h2>
-    <p>Moveo gallery to visualize about courses: <a href="GALLERY10+.html"> Click Here </a> </p>
+    <p>Move gallery to visualize about courses: <a href="GALLERY10+.html"> Click Here </a> </p>
     
     <button class=" btn btn-outline-primary collapsible">Click Here</button>
     <div class="content">
