--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 
   <hr>
   <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="kirru.jpeg">
+    <img class="card-img-top" src="kirru.jpg">
     <div class="card-body">
       <h5 class="card-title">Gogula Kiran Kumar</h5>
     </div>
